Revert: Mise à jour des styles et des propriétés du calendrier
Ajout de nouvelles propriétés bindables dans `CalendarComponent.xaml.cs` pour l'année, le mois et le jour sélectionné. La génération du calendrier utilise désormais des boutons créés dynamiquement.

Ajustements des styles dans `OperationItemComponent.xaml` et mise à jour des noms des mois dans `NumberToMonthConverter.cs` pour une meilleure cohérence.

Changement de la police de caractères de "Montserrat" à "OpenSans" dans plusieurs fichiers, y compris `MauiProgram.cs` et `Styles.xaml`.

Modification des couleurs principales dans `colors.xml` et `Colors.xaml` pour une nouvelle palette.

Ajout de fichiers de polices "OpenSans-Regular.ttf" et "OpenSans-Semibold.ttf" dans le projet.

--- a/SubTrack/Controls/OperationItemComponent.xaml
+++ b/SubTrack/Controls/OperationItemComponent.xaml
@@ -22,25 +22,26 @@
                        Style="{StaticResource OperationIconFrameStyle}">
                     <Image Source="wallet.png"
                            Aspect="AspectFill"
-                           HeightRequest="35"
-                           WidthRequest="35"
+                           HeightRequest="30"
+                           WidthRequest="30"
                            VerticalOptions="Center"
                            HorizontalOptions="Center"/>
                 </Frame>
 
                 <VerticalStackLayout Grid.Column="1"
-                                     VerticalOptions="Center" >
+                                     VerticalOptions="Center"
+                                     Spacing="1">
                     <Label Text="{Binding OperationTitle}"
                            Style="{StaticResource OperationTitleLabelStyle}" />
                     <HorizontalStackLayout>
                         <Label Text="Le "
-                               Style="{StaticResource OperationDateLabelStyle}" />
+                               Style="{StaticResource OperationInfosLabelStyle}" />
                         <Label Text="{Binding OperationDate, StringFormat='{0:dd/MM/yyyy}'}"
-                               Style="{StaticResource OperationDateLabelStyle}"
+                               Style="{StaticResource OperationInfosLabelStyle}"
                                FontAttributes="Bold" />
                     </HorizontalStackLayout>
                     <Label Text="{Binding IsRecurrent, Converter={StaticResource OperationToTextConverter}}"
-                           Style="{StaticResource OperationRedundencyLabelStyle}" />
+                           Style="{StaticResource OperationInfosLabelStyle}" />
                 </VerticalStackLayout>
 
                 <Label Grid.Column="2"
